# tundra-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/: game_data.txt
assets/audio/: ATTRIBUTION.txt
assets/levels/: custom.txt  level1.txt  level2.txt  level_1.txt  level_2.txt  level_3.txt  level_4.txt  level_5.txt  level_6.txt  level_7.txt  level_8.txt  star_thresholds.txt
assets/textures/: tundra-game - Shortcut.lnk
src/: Button.cpp  Button.h  Dropdown.cpp  Dropdown.h  EditCommand.cpp  EditCommand.h  ErrorDialog.cpp  ErrorDialog.h  FontManager.h  GameData.cpp  GameData.h  GameObject.cpp  GameObject.h  GameOverDialog.cpp  GameState.h  GameplayLayer.cpp  GameplayLayer.h  GameplayScene.cpp  GameplayScene.h  GameplayState.cpp  GameplayState.h  InfoDialog.cpp  InfoDialog.h  Level.cpp  Level.h  LevelCard.cpp  LevelCard.h  LevelEditor.cpp  LevelEditor.h  MenuScene.cpp  MenuScene.h  MenuState.cpp  MenuState.h  Particle.cpp  PathFinding.cpp  PathFinding.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  (+15 more)
src/Scenes/: GameplayScene.cpp  GameplayScene.h  LevelEditorScene.cpp  LevelEditorScene.h  LevelSelectScene.cpp  LevelSelectScene.h  MenuScene.cpp  MenuScene.h  OptionsScene.cpp  OptionsScene.h
src/Scenes/Gameplay/: GameOverDialog.cpp  GameOverDialog.h  GameplayScene.cpp  GameplayScene.h  InfoDialog.cpp  InfoDialog.h  PauseMenu.cpp  PauseMenu.h  ScoreBoard.cpp  ScoreBoard.h  ScoreDialog.cpp  ScoreDialog.h
src/Scenes/LevelEditor/: EditCommand.h  EditorControlsDialog.cpp  EditorControlsDialog.h  EditorErrorDialog.cpp  EditorErrorDialog.h  LevelEditor.cpp  LevelEditor.h  LevelEditorScene.cpp  LevelEditorScene.h  TileEditor.cpp  TileEditor.h
src/Scenes/LevelSelect/: LevelCard.cpp  LevelCard.h  LevelSelectScene.cpp  LevelSelectScene.h
src/Scenes/Menu/: MenuScene.cpp  MenuScene.h  Particle.h
src/Scenes/Options/: OptionsScene.cpp  OptionsScene.h
